--- a/sys/tokens.css
+++ b/sys/tokens.css
@@ -19,3 +19,50 @@ titles
     text-decoration: none;
     transition: color 0.5s ease-in-out;
 }
+
+/*********************************************
+
+spaces
+
+*********************************************/
+.clear10x{ height: 10px !important; }
+.clear20x{ height: 20px !important; }
+.clear30x{ height: 30px !important; }
+.clear40x{ height: 40px !important; }
+.clear50x{ height: 50px !important; }
+.clear60x{ height: 60px !important; }
+.clear70x{ height: 70px !important; }
+.clear80x{ height: 80px !important; }
+.clear90x{ height: 90px !important; }
+.clear100x{ height: 100px !important; }
+.clear200x{ height: 200px !important; }
+.clear300x{ height: 300px !important; }
+.clear400x{ height: 400px !important; }
+.clear500x{ height: 500px !important; }
+
+/*********************************************
+
+fix browser
+
+*********************************************/
+body{
+    margin: 0;
+    line-height: 0;
+}
+
+p {
+    display: block;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+    line-height: 1;
+}
+ul {
+    list-style-type: disc;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+    padding-inline-start: 0;
+}
