--- a/vfx/vfx.css
+++ b/vfx/vfx.css
@@ -24,15 +24,44 @@ image left
 .image-left img{
     width: 100%;
 }
-.image-left-text{
+.image-left-content{
     padding-left: 60px;
     padding-right: 60px;
+    font-size: 16px;
 }
 @media (orientation: portrait) {
     .image-left{
         display: block;
     }
     .image-left div{
+        width: 100%;
+    }
+}
+
+/*********************************************
+
+image right
+
+*********************************************/
+.image-right{
+    display: flex;
+}
+.image-right div{
+    width: 50%;
+}
+.image-right img{
+    width: 100%;
+}
+.image-right-text{
+    padding-left: 60px;
+    padding-right: 60px;
+    font-size: 16px;
+}
+@media (orientation: portrait) {
+    .image-right{
+        display: block;
+    }
+    .image-right div{
         width: 100%;
     }
 }
@@ -46,6 +75,7 @@ footer default
     text-align: center;
     font-size: 10px;
     text-transform: uppercase;
+    padding-bottom: 20px;
 }
 .footer-default-social{
     text-align: center;
@@ -64,46 +94,3 @@ footer default
     font-size: 30px;
 }
 
-/*********************************************
-
-spaces
-
-*********************************************/
-.clear10x{ height: 10px !important; }
-.clear20x{ height: 20px !important; }
-.clear30x{ height: 30px !important; }
-.clear40x{ height: 40px !important; }
-.clear50x{ height: 50px !important; }
-.clear60x{ height: 60px !important; }
-.clear70x{ height: 70px !important; }
-.clear80x{ height: 80px !important; }
-.clear90x{ height: 90px !important; }
-.clear100x{ height: 100px !important; }
-.clear200x{ height: 200px !important; }
-.clear300x{ height: 300px !important; }
-.clear400x{ height: 400px !important; }
-.clear500x{ height: 500px !important; }
-
-/*********************************************
-
-fix browser
-
-*********************************************/
-body{
-    margin: 0;
-}
-p {
-    display: block;
-    margin-block-start: 0;
-    margin-block-end: 0;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
-}
-ul {
-    list-style-type: disc;
-    margin-block-start: 0;
-    margin-block-end: 0;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
-    padding-inline-start: 0;
-}
