--- a/sys/tokens.css
+++ b/sys/tokens.css
@@ -1,5 +1,26 @@
 /*********************************************
 
+button
+
+*********************************************/
+.btn-color1{
+    transition: background-color 0.5s ease-in-out;
+    display: inline-block;
+    background-color: var(--color1);
+    color: var(--color2);
+    text-decoration: none;
+    padding: 10px 50px;
+    border-radius: 5px;
+    cursor: pointer;
+    align-self: flex-start; 
+}
+.btn-color1:hover{
+    background-color: var(--color5);
+    color: var(--color3);
+}
+
+/*********************************************
+
 align
 
 *********************************************/
@@ -47,10 +68,11 @@ fix browser
 *********************************************/
 body{
     margin: 0;
-    line-height: 0;
     overflow-x: hidden;
 }
-
+h1, h2, h3, h4{
+    line-height: 0;
+}
 p {
     display: block;
     margin-block-start: 0;
