--- a/sys/tokens.css
+++ b/sys/tokens.css
@@ -9,10 +9,14 @@ button
     background-color: var(--color1);
     color: var(--color2);
     text-decoration: none;
-    padding: 10px 50px;
     border-radius: 5px;
     cursor: pointer;
-    align-self: flex-start; 
+    align-self: flex-start;
+    font-size: 16px !important;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 .btn-color1:hover{
     background-color: var(--color5);
@@ -36,7 +40,12 @@ titles
 
 *********************************************/
 .title-1{
-    font-size: 30px !important;
+    font-size: 40px !important;
+    text-decoration: none;
+    transition: color 0.5s ease-in-out;
+}
+.title-2{
+    font-size: 26px !important;
     text-decoration: none;
     transition: color 0.5s ease-in-out;
 }
@@ -66,12 +75,21 @@ spaces
 fix browser
 
 *********************************************/
-body{
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+html, body{
+    box-sizing: border-box;
+    scroll-behavior: auto !important;
+    margin-top: 0;
+    margin-bottom: 0; 
     margin: 0;
     overflow-x: hidden;
 }
-h1, h2, h3, h4{
-    line-height: 0;
+h1, h2, h3, h4 {
+    line-height: .9;
+    margin-top: 0;
+    margin-bottom: 0; 
 }
 p {
     display: block;
